--- a/includes/theme-custom-contribution/static/css/src/style.css
+++ b/includes/theme-custom-contribution/static/css/src/style.css
@@ -22,3 +22,54 @@
 		top: -5px;
 		left: 10px;
 	}
+	#ctb-file-progress,
+	#ctb-file-completion,
+	#ctb-files{
+		display: none;
+		margin-top: 10px;
+	}
+	#ctb-file-progress{
+		position: relative;
+	}
+		#ctb-file-progress-bar{
+			background: #428bca;
+			position: absolute;
+			bottom: 0;
+			left: 0;
+			height: 1px;
+		}
+	#ctb-files{
+		margin-top: 0;
+	}
+	
+	#ctb-files .thumbnail-tpl{
+		position: relative;
+		margin-top: 10px;
+	}
+		#ctb-files .img-link{
+			display: block;
+			border: 5px solid #fff;
+			box-shadow: 0 0 3px rgba(0,0,0,.3);
+			border-radius: 4px;
+		}
+			#ctb-files .img-link:hover{
+				border-color: #428bca;
+			}
+			#ctb-files .img-del{
+				position: absolute;
+				right: 15px;
+				bottom: 5px;
+				width: 20px;
+				height: 20px;
+				font-size: 10px;
+				font-weight: bold;
+				text-align: center;
+				line-height: 20px;
+				color:#fff;
+				border-radius: 50%;
+				background: #d9534f;
+				opacity: .7;
+			}
+			#ctb-files .img-del:hover{
+				opacity: 1;
+			}
