--- a/includes/theme-custom-user-settings/static/css/src/avatar.css
+++ b/includes/theme-custom-user-settings/static/css/src/avatar.css
@@ -8,7 +8,7 @@
 }
 
 #new-avatar-btn{
-	padding: 40px 50px;
+	padding: 40px 0;
 	border: 5px dashed #ccc;
 	background: rgb(245,245,245);
 	font-size: 1.5em;
@@ -16,4 +16,30 @@
 	#new-avatar-btn:hover{
 		background: rgb(240,240,240);
 		border-color: #777;
+	}
+
+#avatar-loading-tip,
+#cropper-container,
+#cropper-done-btn{
+	display: none;
+	margin-bottom: 10px;
+}
+	#cropper-container img{
+		max-width: 300px;
+		max-height: 300px;
+	}
+	.cropper-container{
+		max-width: 100%;
+	}
+#avatar-preview{
+	display: none;
+	width: 155px;
+	height: 155px;
+	margin: 0 auto;
+	overflow: hidden;
+	border-radius: 50%;
+	border: 5px solid #fff;
+	box-shadow: 0 0 3px rgba(0,0,0,.3);
+}
+	#avatar-preview img{
 	}
